tests/machine/x/c/update_stmt.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/update_stmt.c:20:3: error: conflicting types for ‘Person’; have ‘struct <anonymous>’
   20 | } Person;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:14:23: note: previous declaration of ‘Person’ with type ‘Person’
   14 | typedef struct Person Person;
      |                       ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘test_update_adult_status’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:24:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   24 |   _t1.data[0] = (Person){.name = "Alice", .age = 17, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:25:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   25 |   _t1.data[1] = (Person){.name = "Bob", .age = 26, .status = "adult"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:26:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   26 |   _t1.data[2] = (Person){.name = "Charlie", .age = 19, .status = "adult"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:27:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   27 |   _t1.data[3] = (Person){.name = "Diana", .age = 16, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:28:10: error: ‘people’ undeclared (first use in this function)
   28 |   if (!((people == _t1))) {
      |          ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:28:10: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:36:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   36 |   _t2.data[0] = (Person){.name = "Alice", .age = 17, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:37:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   37 |   _t2.data[1] = (Person){.name = "Bob", .age = 25, .status = "unknown"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:38:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   38 |   _t2.data[2] = (Person){.name = "Charlie", .age = 18, .status = "unknown"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:39:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   39 |   _t2.data[3] = (Person){.name = "Diana", .age = 16, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:40:3: error: unknown type name ‘list_Person’
   40 |   list_Person people = _t2;
      |   ^~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:40:24: error: incompatible types when initializing type ‘int’ using type ‘list_int’
   40 |   list_Person people = _t2;
      |                        ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:41:33: error: request for member ‘len’ in something not a structure or union
   41 |   for (int _t3 = 0; _t3 < people.len; _t3++) {
      |                                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:42:24: error: request for member ‘data’ in something not a structure or union
   42 |     Person _t4 = people.data[_t3];
      |                        ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:46:11: error: redefinition of ‘name’
   46 |     char *name = _t4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:43:11: note: previous definition of ‘name’ with type ‘char *’
   43 |     char *name = _t4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:47:9: error: redefinition of ‘age’
   47 |     int age = _t4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:44:9: note: previous definition of ‘age’ with type ‘int’
   44 |     int age = _t4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:48:11: error: redefinition of ‘status’
   48 |     char *status = _t4.status;
      |           ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:45:11: note: previous definition of ‘status’ with type ‘char *’
   45 |     char *status = _t4.status;
      |           ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:53:11: error: request for member ‘data’ in something not a structure or union
   53 |     people.data[_t3] = _t4;
      |           ^

   1: #include <stdio.h>
